# Atlas200mini_Simulation

./: README.md
atlas200mini_control/: CMakeLists.txt  package.xml
atlas200mini_control/config/: control.yaml  ekf_localization.yaml  teleop.yaml  twist_mux.yaml
atlas200mini_control/launch/: control.launch  joy_teleop.launch  keyboard_teleop.launch
atlas200mini_description/: CMakeLists.txt  package.xml
atlas200mini_description/launch/: description.launch
atlas200mini_description/meshes/accessories/: OS_1.STL
atlas200mini_description/urdf/: OS-1-16.urdf.xacro  VLP-16.urdf.xacro  atlas200mini.urdf.xacro  body.urdf.xacro  d435.urdf.xacro  hokuyo.urdf.xacro  imu.urdf.xacro  materials.xacro  wheel.urdf.xacro
