<?xml version="1.0"?>
<package format="2">
  <name>atlas200mini_description</name>
  <version>0.0.0</version>
  <description>The atlas200mini_description package</description>

  <maintainer email="samuel@shadoev.com">samuel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
